@startuml
title モデル
class SiteService{
  name
  url
  ---
  getUrls
  getHTML
  saveOrUpdateRawPage
  removeExcludes
  getUpdatedRawPages
  extractContents
  saveOrUpdatePage
}
class RawPage{
  site_name
  url
  html
}
class Page{
  site_name
  url
  text
  title
}
class Pak{
  name
  slug
}
class SimutransPortalSiteService
class JapaneseSimutransSiteService
class TwitransSiteService
class ScrapeCommand
class ExtractCommand
class Portal\Article
class Portal\Category
ScrapeCommand -- SiteService
ExtractCommand -- SiteService
SiteService -- RawPage
SiteService -- Page
RawPage -- Page
Page -- Pak
SiteService <|- JapaneseSimutransSiteService
SiteService <|- TwitransSiteService
SiteService <|- SimutransPortalSiteService
SimutransPortalSiteService -- Portal\Article
SimutransPortalSiteService -- Portal\Category
@enduml
